Refactor URL creation to use URI in utility classes
Replaced direct URL instantiation with URI.create(...).toURL() in EmojiManager and ImageMapCache for improved URL handling and consistency. Also updated lambda parameter names in stats.java to use '_' for unused variables, enhancing code clarity.